Update: added ui/stream_app.py, Dockerfile, docker-compose.yml, and other fixes

--- a/.env
+++ b/.env
@@ -16,8 +16,7 @@ PINECONE_API_KEY=5e8f6c3d-2f4a-4b1b-9e1e-1f3c8e4d5b6a
 PINECONE_ENVIRONMENT=us-west4-gcp-free
 
 OPENAI_API_KEY=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
-APP_OUTPUTS=/app/outputs
-APP_DATA=/app/data
-APP_MODELS=/app/models
-#YTDLP_COOKIES=/app/cookies.txt
-YT_COOKIES=/app/cookies.txt
+TASTE_MODEL_PATH=s3://pgfinal/taste_model_randomforest.joblib
+TASTE_LABEL_BINARIZER=s3://pgfinal/taste_label_binarizer.joblib
+FLAVOR_DATASET=s3://pgfinal/flavor_kb_master.csv
+FAISS_INDEX_DIR=s3://pgfinal/faiss_index
