--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,38 +1,15 @@
-# -------- Base image --------
-FROM python:3.10-slim
+version: "3.9"
 
-# Speed & reliability
-ENV PIP_NO_CACHE_DIR=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
-
-# Workdir where SageMaker expects code
-WORKDIR /opt/program
-
-# -------- System deps (build wheels, faiss, etc.) --------
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
-# -------- Python deps --------
-# (keep requirements.txt at repo root)
-COPY requirements.txt ./requirements.txt
-RUN pip install -r requirements.txt
-
-# -------- Project code/artifacts --------
-# copy exactly the dirs you need at runtime
-COPY src     ./src
-COPY deploy  ./deploy
-COPY data    ./data
-COPY models  ./models
-# If you already have a FAISS index and want to bake it in:
-# COPY faiss_index ./faiss_index
-
-# Let Python find your src/ package
-ENV PYTHONPATH=/opt/program/src
-
-# SageMaker listens on :8080 and calls /ping and /invocations
-EXPOSE 8080
-
-# Health + inference entry
-CMD ["./deploy/serve.sh"]
+services:
+  flavor-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: flavor_app
+    ports:
+      - "8501:8501"   # expose on EC2 public IP
+    environment:
+      - STREAMLIT_SERVER_HEADLESS=true
+      - STREAMLIT_SERVER_ADDRESS=0.0.0.0
+      - STREAMLIT_SERVER_PORT=8501
+    restart: always
