--- a/deploy/dockerfile.yml
+++ b/deploy/dockerfile.yml
@@ -1,5 +1,25 @@
-sudo curl -L "https://github.com/docker/compose/releases/download/v2.27.0/docker-compose-$(uname -s)-$(uname -m)" \
-  -o /usr/local/bin/docker-compose
+# Use Python 3.9 for consistency
+FROM python:3.9-slim
 
-sudo chmod +x /usr/local/bin/docker-compose
-docker-compose version
+WORKDIR /app
+
+# Install system dependencies if needed (optional)
+# RUN apt-get update && apt-get install -y build-essential && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
+
+# Copy project files
+COPY . /app
+
+# Streamlit environment setup
+ENV STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
+ENV STREAMLIT_SERVER_HEADLESS=true
+ENV STREAMLIT_SERVER_ADDRESS=0.0.0.0
+ENV STREAMLIT_SERVER_PORT=8501
+
+EXPOSE 8501
+
+# Run your Streamlit app
+CMD ["streamlit", "run", "ui/stream_app.py"]
